Fix content wrapping when using of as the separator instead of /

--- a/css/prettyPhoto.css
+++ b/css/prettyPhoto.css
@@ -46,7 +46,7 @@
 	div.pp_default a.pp_arrow_next { background: url(../images/prettyPhoto/default/sprite.png) -31px -3px no-repeat; height: 20px; margin: 4px 0 0 0; width: 20px; }
 	div.pp_default a.pp_arrow_next { left: 52px; background-position: -82px -3px; } /* The next arrow in the bottom nav */
 	div.pp_default .pp_content_container .pp_details { margin-top: 5px; }
-	div.pp_default .pp_nav { clear: none; height: 30px; width: 105px; position: relative; }
+	div.pp_default .pp_nav { clear: none; height: 30px; width: 110px; position: relative; }
 	div.pp_default .pp_nav .currentTextHolder{ font-family: Georgia; font-style: italic; color:#999; font-size: 11px; left: 75px; line-height: 25px; margin: 0; padding: 0 0 0 10px; position: absolute; top: 2px; }
 	
 	div.pp_default .pp_close:hover, div.pp_default .pp_nav .pp_play:hover, div.pp_default .pp_nav .pp_pause:hover, div.pp_default .pp_arrow_next:hover, div.pp_default .pp_arrow_previous:hover { opacity:0.7; }
@@ -340,6 +340,7 @@
 					.pp_nav p {
 						float: left;
 						margin: 2px 4px;
+						white-space: nowrap;
 					}
 					
 					.pp_nav .pp_play,
@@ -522,8 +523,3 @@
 			margin: 0 0 5px 15px;
 			z-index: 9999;
 		}
-
-/* ------------------------------------------------------------------------
-	Miscellaneous
-------------------------------------------------------------------------- */
-
